# nominal-streaming

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  flake.nix  justfile  main.py  pyproject.toml  python.just  release-plz.toml  rust-toolchain.toml  rust.just  taplo.toml  test.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: srawpfb9lp9kwxb3n45hnp00pc9dhgwp-source
.github/: dependabot.yml  rust.json
.github/actions/cache-cargo-tools/: action.yml
.github/actions/setup-rust-cache/: action.yml
.github/workflows/: build-and-push-python.yml  build-and-test-python.yml  build-and-test-rust.yml  ci.yml  lint.yml  merge-dependabot.yml  release-plz.yml  rust.yml
examples/: store_and_forward_test.rs
nominal-streaming/: CHANGELOG.md  Cargo.toml
nominal-streaming/benches/streaming/: helpers.rs  main.rs  mock_server.rs
nominal-streaming/src/: client.rs  columnar.rs  consumer.rs  lib.rs  listener.rs  log.rs  log_stream.rs  row.rs  series_buffer.rs  simulated_consumer.rs  stream.rs  types.rs  upload.rs
nominal-streaming/src/avro_writer/: consumer.rs  error.rs  helpers.rs  mod.rs  opts.rs  polars.rs  state.rs  stats.rs  writer.rs
py-nominal-streaming/: Cargo.toml  README.md  __init__.py  pyproject.toml
py-nominal-streaming/benchmarks/: bench_nominal_avro_writer.py  head_to_head.py  pipeline_profile.py  sweep.py
py-nominal-streaming/examples/: test.py  test_file_only.py  test_struct_array.py  test_worker_thread.py
py-nominal-streaming/python/nominal_streaming/: __init__.py  _nominal_streaming.pyi  _timestamp.py  nominal_dataset_stream.py
py-nominal-streaming/python/tests/: test_nominal_avro_writer.py
py-nominal-streaming/src/: builder_state.rs  lazy_dataset_stream_builder.rs  lib.rs  nominal_dataset_stream.rs  nominal_stream_opts.rs  point.rs  runtime.rs
py-nominal-streaming/src/avro_writer/: error_map.rs  mod.rs  opts.rs  polars_ffi.rs  pymethods.rs  writer.rs
scripts/: fmt.sh  lint.sh  test.sh  tooling.sh
src/: client.rs  consumer.rs  lib.rs  monitor.rs  notifier.rs  stream.rs  types.rs  upload.rs
xtask/bench/: Cargo.toml
xtask/bench/src/: main.rs
xtask/src/: main.rs
