[package]
name = "nominal-streaming"
version = "0.4.0"
edition = "2021"
description = "Library for durable, low-latency streaming into Nominal Core"
license = "MIT"

[features]
default = ["logging"]
logging = ["tracing-subscriber"]

[dependencies]
conjure-error = "4"
conjure-http = "4"
conjure-object = "4"
conjure-runtime = "6"
nominal-api = "0.917.0"
prost = "0.13"
snap = "1"
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing", "io-util"] }
url = "2.5.4"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "env-filter"] }
apache-avro = { version = "0.17.0", features = ["snappy"] }
derive_more = { version = "2", features = ["from"] }
serde_json = "1.0.140"
chrono = "0.4.41"
thiserror = "2"
crossbeam-channel = "0.5.15"
reqwest = "0.12.22"
log = "0.4.27"
async-channel = "2.5.0"
rand = "0.8.5"
bytes = "1.10.1"

[profile.release]
debug = true

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
