[workspace]
members = [
    "nominal-streaming",
    "py-nominal-streaming",
]
resolver = "2"

[workspace.dependencies]
apache-avro = { version = "0.17.0", features = ["snappy"] }
async-channel = "2.5.0"
chrono = "0.4.41"
conjure-error = "4"
conjure-http = "4"
conjure-object = "4"
conjure-runtime = "6"
crossbeam-channel = "0.5.15"
derive_more = { version = "2", features = ["from"] }
futures = "0.3"
nominal-api = "0.1002.0"
parking_lot = "0.12"
prost = "0.13"
reqwest = "0.12.22"
serde_json = "1.0.140"
snap = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "tracing", "io-util" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5.4"

# Test dependencies
test-log = { version = "0.2.18", features = ["trace"] }

# Allow workspace packages to access core package
nominal-streaming = { path = "nominal-streaming" }
py-nominal-streaming = { path = "py-nominal-streaming" }

[profile.release]
debug = true
