[package]
name = "py-nominal-streaming"
description = "Python bindings for the nominal-streaming Rust library"
edition = "2021"
license = "MIT"
version = "0.5.1"

[lib]
# This becomes the *module* name on the Python side unless overridden by tool.maturin.module-name
name = "_nominal_streaming"
crate-type = ["cdylib"]

[dependencies]
# PyO3 with a stable ABI across Python 3.10+.
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py310", "time"] }

nominal-api = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
once_cell = "1.19"

# Logging setup
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Depend on the Rust core crate in the repository root
nominal-streaming = { workspace = true, features = ["logging"] }

anyhow = "1"
crossbeam-channel = "0.5"
tokio-util = "0.7"
