[project]
name = "nominal-streaming"
description = "Python bindings for the Nominal Rust streaming client"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Let maturin source the version from Cargo.toml
dynamic = [
  "readme",
  "urls",
  "authors",
  "license",
  "version",
]

dependencies = [
  "python-dateutil>=0.0.0",
]


[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Put the compiled extension *inside* the top-level `nominal_streaming` folder
module-name  = "nominal_streaming._nominal_streaming"
requires-python = ">=3.10"
profile = "release"
strip = true
manifest-path = "./Cargo.toml"

features = [
  "pyo3/extension-module",  # Required on unix platforms to prevent linking against libpython.so
  "pyo3/abi3-py310"         # Sets the exact minimum python version supported within multi-version wheels
]

# Tell maturin where the python code lives.
# All files under this directory will be included in the wheel.
python-source = "python"
